CSV file update

--- a/trendyol/ty_vegan_candle_scraper.ipynb
+++ b/trendyol/ty_vegan_candle_scraper.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,11 +86,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is completed\n",
+      "3 is completed\n",
+      "4 is completed\n",
+      "5 is completed\n",
+      "6 is completed\n",
+      "7 is completed\n",
+      "8 is completed\n",
+      "9 is completed\n",
+      "10 is completed\n",
+      "11 is completed\n",
+      "12 is completed\n",
+      "13 is completed\n",
+      "14 is completed\n",
+      "15 is completed\n",
+      "16 is completed\n",
+      "17 is completed\n",
+      "18 is completed\n",
+      "19 is completed\n",
+      "20 is completed\n",
+      "21 is completed\n",
+      "22 is completed\n",
+      "23 is completed\n",
+      "24 is completed\n",
+      "25 is completed\n",
+      "26 is completed\n",
+      "27 is completed\n",
+      "28 is completed\n",
+      "29 is completed\n",
+      "30 is completed\n",
+      "31 is completed\n",
+      "32 is completed\n",
+      "33 is completed\n",
+      "34 is completed\n",
+      "35 is completed\n",
+      "36 is completed\n",
+      "37 is completed\n",
+      "38 is completed\n",
+      "39 is completed\n",
+      "40 is completed\n",
+      "41 is completed\n",
+      "42 is completed\n",
+      "43 is completed\n",
+      "44 is completed\n",
+      "45 is completed\n",
+      "46 is completed\n",
+      "47 is completed\n",
+      "48 is completed\n",
+      "49 is completed\n",
+      "50 is completed\n",
+      "51 is completed\n",
+      "52 is completed\n",
+      "53 is completed\n",
+      "54 is completed\n",
+      "55 is completed\n",
+      "56 is completed\n",
+      "57 is completed\n",
+      "58 is completed\n"
+     ]
+    }
+   ],
    "source": [
-    "for page in range(3, page_count):\n",
+    "for page in range(2, page_count):\n",
     "    url_inner = \"https://public.trendyol.com/discovery-web-searchgw-service/v2/api/infinite-scroll/\" \\\n",
     "        \"sr?q=vegan+kokulu+mum&qt=vegan+kokulu+mum\" \\\n",
     "        \"&st=vegan+kokulu+mum&os=1\" \\\n",
@@ -111,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,29 +213,371 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"180 TL'ye %10 İndirim\""
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# inner_df[1][4][\"name\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>images</th>\n",
+       "      <th>imageAlt</th>\n",
+       "      <th>brand.id</th>\n",
+       "      <th>brand.name</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>businessUnit</th>\n",
+       "      <th>showSexualContent</th>\n",
+       "      <th>productGroupId</th>\n",
+       "      <th>hasReviewPhoto</th>\n",
+       "      <th>cardType</th>\n",
+       "      <th>hasCollectableCoupon</th>\n",
+       "      <th>sameDayShipping</th>\n",
+       "      <th>isLegalRequirementConfirmed</th>\n",
+       "      <th>badges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12</td>\n",
+       "      <td>193952078</td>\n",
+       "      <td>%100 Natürel Soya wax Vegan Organik Mum Yapımı...</td>\n",
+       "      <td>[/ty406/product/media/images/20220420/18/95431...</td>\n",
+       "      <td>SillageCandle %100 Natürel Soya wax Vegan Orga...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>167909907</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>193952078</td>\n",
+       "      <td>%100 Natürel Soya wax Vegan Organik Mum Yapımı...</td>\n",
+       "      <td>[/ty406/product/media/images/20220420/18/95431...</td>\n",
+       "      <td>SillageCandle %100 Natürel Soya wax Vegan Orga...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>167909907</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>101400</td>\n",
+       "      <td>193952078</td>\n",
+       "      <td>%100 Natürel Soya wax Vegan Organik Mum Yapımı...</td>\n",
+       "      <td>[/ty406/product/media/images/20220420/18/95431...</td>\n",
+       "      <td>SillageCandle %100 Natürel Soya wax Vegan Orga...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>167909907</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>306856681</td>\n",
+       "      <td>Dekoratif Buzdağı Mum - Buzdağı Kokulu Vegan S...</td>\n",
+       "      <td>[/ty442/product/media/images/20220530/0/118039...</td>\n",
+       "      <td>Cageartstudio Dekoratif Buzdağı Mum - Buzdağı ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>255962220</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>101400</td>\n",
+       "      <td>306856681</td>\n",
+       "      <td>Dekoratif Buzdağı Mum - Buzdağı Kokulu Vegan S...</td>\n",
+       "      <td>[/ty442/product/media/images/20220530/0/118039...</td>\n",
+       "      <td>Cageartstudio Dekoratif Buzdağı Mum - Buzdağı ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>255962220</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>7</td>\n",
+       "      <td>331569407</td>\n",
+       "      <td>Dekoratif Styliş Kokulu Mum - Kokulu Vegan Soy...</td>\n",
+       "      <td>[/ty490/product/media/images/20220725/15/14958...</td>\n",
+       "      <td>Cageartstudio Dekoratif Styliş Kokulu Mum - Ko...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>271429960</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>101400</td>\n",
+       "      <td>331569407</td>\n",
+       "      <td>Dekoratif Styliş Kokulu Mum - Kokulu Vegan Soy...</td>\n",
+       "      <td>[/ty490/product/media/images/20220725/15/14958...</td>\n",
+       "      <td>Cageartstudio Dekoratif Styliş Kokulu Mum - Ko...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>271429960</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>12</td>\n",
+       "      <td>451235609</td>\n",
+       "      <td>Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...</td>\n",
+       "      <td>[/ty637/product/media/images/20221211/3/233694...</td>\n",
+       "      <td>Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>323397651</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>7</td>\n",
+       "      <td>451235609</td>\n",
+       "      <td>Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...</td>\n",
+       "      <td>[/ty637/product/media/images/20221211/3/233694...</td>\n",
+       "      <td>Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>323397651</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>101400</td>\n",
+       "      <td>451235609</td>\n",
+       "      <td>Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...</td>\n",
+       "      <td>[/ty637/product/media/images/20221211/3/233694...</td>\n",
+       "      <td>Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Ev Dekorasyon</td>\n",
+       "      <td>True</td>\n",
+       "      <td>323397651</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PRODUCT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       _id         id                                               name  \\\n",
+       "0       12  193952078  %100 Natürel Soya wax Vegan Organik Mum Yapımı...   \n",
+       "1        7  193952078  %100 Natürel Soya wax Vegan Organik Mum Yapımı...   \n",
+       "2   101400  193952078  %100 Natürel Soya wax Vegan Organik Mum Yapımı...   \n",
+       "3        7  306856681  Dekoratif Buzdağı Mum - Buzdağı Kokulu Vegan S...   \n",
+       "4   101400  306856681  Dekoratif Buzdağı Mum - Buzdağı Kokulu Vegan S...   \n",
+       "..     ...        ...                                                ...   \n",
+       "67       7  331569407  Dekoratif Styliş Kokulu Mum - Kokulu Vegan Soy...   \n",
+       "68  101400  331569407  Dekoratif Styliş Kokulu Mum - Kokulu Vegan Soy...   \n",
+       "69      12  451235609  Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...   \n",
+       "70       7  451235609  Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...   \n",
+       "71  101400  451235609  Dekoratif Minik Ayıcık Mum - Kokulu Vegan Soya...   \n",
+       "\n",
+       "                                               images  \\\n",
+       "0   [/ty406/product/media/images/20220420/18/95431...   \n",
+       "1   [/ty406/product/media/images/20220420/18/95431...   \n",
+       "2   [/ty406/product/media/images/20220420/18/95431...   \n",
+       "3   [/ty442/product/media/images/20220530/0/118039...   \n",
+       "4   [/ty442/product/media/images/20220530/0/118039...   \n",
+       "..                                                ...   \n",
+       "67  [/ty490/product/media/images/20220725/15/14958...   \n",
+       "68  [/ty490/product/media/images/20220725/15/14958...   \n",
+       "69  [/ty637/product/media/images/20221211/3/233694...   \n",
+       "70  [/ty637/product/media/images/20221211/3/233694...   \n",
+       "71  [/ty637/product/media/images/20221211/3/233694...   \n",
+       "\n",
+       "                                             imageAlt brand.id brand.name tax  \\\n",
+       "0   SillageCandle %100 Natürel Soya wax Vegan Orga...      NaN        NaN  18   \n",
+       "1   SillageCandle %100 Natürel Soya wax Vegan Orga...      NaN        NaN  18   \n",
+       "2   SillageCandle %100 Natürel Soya wax Vegan Orga...      NaN        NaN  18   \n",
+       "3   Cageartstudio Dekoratif Buzdağı Mum - Buzdağı ...      NaN        NaN  18   \n",
+       "4   Cageartstudio Dekoratif Buzdağı Mum - Buzdağı ...      NaN        NaN  18   \n",
+       "..                                                ...      ...        ...  ..   \n",
+       "67  Cageartstudio Dekoratif Styliş Kokulu Mum - Ko...      NaN        NaN  18   \n",
+       "68  Cageartstudio Dekoratif Styliş Kokulu Mum - Ko...      NaN        NaN  18   \n",
+       "69  Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...      NaN        NaN  18   \n",
+       "70  Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...      NaN        NaN  18   \n",
+       "71  Cageartstudio Dekoratif Minik Ayıcık Mum - Kok...      NaN        NaN  18   \n",
+       "\n",
+       "     businessUnit showSexualContent productGroupId hasReviewPhoto cardType  \\\n",
+       "0   Ev Dekorasyon              True      167909907           True  PRODUCT   \n",
+       "1   Ev Dekorasyon              True      167909907           True  PRODUCT   \n",
+       "2   Ev Dekorasyon              True      167909907           True  PRODUCT   \n",
+       "3   Ev Dekorasyon              True      255962220           True  PRODUCT   \n",
+       "4   Ev Dekorasyon              True      255962220           True  PRODUCT   \n",
+       "..            ...               ...            ...            ...      ...   \n",
+       "67  Ev Dekorasyon              True      271429960           True  PRODUCT   \n",
+       "68  Ev Dekorasyon              True      271429960           True  PRODUCT   \n",
+       "69  Ev Dekorasyon              True      323397651           True  PRODUCT   \n",
+       "70  Ev Dekorasyon              True      323397651           True  PRODUCT   \n",
+       "71  Ev Dekorasyon              True      323397651           True  PRODUCT   \n",
+       "\n",
+       "   hasCollectableCoupon sameDayShipping isLegalRequirementConfirmed  \\\n",
+       "0                 False           False                       False   \n",
+       "1                 False           False                       False   \n",
+       "2                 False           False                       False   \n",
+       "3                 False           False                       False   \n",
+       "4                 False           False                       False   \n",
+       "..                  ...             ...                         ...   \n",
+       "67                False           False                       False   \n",
+       "68                False           False                       False   \n",
+       "69                False           False                       False   \n",
+       "70                False           False                       False   \n",
+       "71                False           False                       False   \n",
+       "\n",
+       "                                               badges  \n",
+       "0   [{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...  \n",
+       "1   [{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...  \n",
+       "2   [{'title': 'Hızlı Teslimat', 'type': 'RUSH_DEL...  \n",
+       "3                                                  []  \n",
+       "4                                                  []  \n",
+       "..                                                ...  \n",
+       "67                                                 []  \n",
+       "68                                                 []  \n",
+       "69                                                 []  \n",
+       "70                                                 []  \n",
+       "71                                                 []  \n",
+       "\n",
+       "[72 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.json_normalize(\n",
     "    raw_data['result']['products'],\n",
